syntax = "proto3";

package project.planton.provider.aws.awsclientvpn.v1;

import "project/planton/provider/aws/awsclientvpn/v1/api.proto";
import "project/planton/provider/aws/provider.proto";

//aws-client-vpn stack-input
message AwsClientVpnStackInput {
  //target cloud-resource
  AwsClientVpn target = 1;
  //provider-config
  project.planton.provider.aws.AwsProviderConfig provider_config = 2;
}
